--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,9 +1,18 @@
-version: 0.1
+version: 0.2
 
 phases:
   install:
     commands:
       - curl -L "https://github.com/docker/compose/releases/download/1.11.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose && chmod +x /usr/local/bin/docker-compose
+  pre_build:
+    commands:
+      - echo Logging in to Amazon ECR...
+      - $(aws ecr get-login --region $AWS_DEFAULT_REGION  --no-include-email)
   build:
     commands:
-      - docker-compose --version
+      - echo Building the Docker image...
+      - docker-compose build
+  post_build:
+    commands:
+      - echo Pushing the Docker image...
+      - docker-compose push
