Update build spec file

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,5 +16,5 @@ phases:
     commands:
       - echo Pushing the Docker image...
       - docker-compose push
-#      - echo Sending notification...
+      - echo Sending notification...
 #      - aws sns publish --topic-arn "$SNS_TOPIC_ARN" --subject "AWS CodeBuild - Build Completed - Status: $CODEBUILD_BUILD_SUCCEEDING" --message "https://console.aws.amazon.com/cloudwatch/home?region=$AWS_DEFAULT_REGION#logStream:group=/aws/codebuild/$BUILD_PROJECT_NAME"
