--- a/codebuild-project/buildproject.json.sample
+++ b/codebuild-project/buildproject.json.sample
@@ -13,10 +13,6 @@
     "computeType": "BUILD_GENERAL1_MEDIUM",
     "environmentVariables": [
       {
-        "name": "AWS_DEFAULT_REGION",
-        "value": "ap-northeast-1"
-      },
-      {
         "name": "AWS_ACCOUNT_ID",
         "value": "{{YOUR_AWS_ACCOUNT_ID}}"
       },
@@ -31,6 +27,10 @@
       {
         "name": "IMAGE_TAG",
         "value": "latest"
+      },
+      {
+        "name": "SNS_TOPIC_ARN",
+        "value": "{{YOUR_AWS_SNS_TOPIC_ARN}}"
       }
     ]
   },
