Add debug command to buildspec.yml

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,4 +17,5 @@ phases:
       - echo Pushing the Docker image...
       - docker-compose push
       - echo Sending notification...
+      - ls -l ./script/post_build_notification.sh
       - ./script/post_build_notification.sh
