--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,5 +17,4 @@ phases:
       - echo Pushing the Docker image...
       - docker-compose push
       - echo Sending notification...
-      - ls -l ./script/post_build_notification.sh
-      - ./script/post_build_notification.sh
+      - aws sns publish --topic-arn "${SNS_TOPIC_ARN}" --subject "AWS CodeBuild - ${CODEBUILD_BUILD_ID}" --message "Build Completed. Imange:${IMAGE_REPO_NAME_WEBAPP}, Initiator:${CODEBUILD_INITIATOR}"
