--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,10 +11,10 @@ phases:
   build:
     commands:
       - echo Building the Docker image...
-      - docker-compose build
+      - docker-compose build $SERVICE
   post_build:
     commands:
       - echo Pushing the Docker image...
-      - docker-compose push
+      - docker-compose push $SERVICE
       - echo Sending notification...
       - aws sns publish --topic-arn "${SNS_TOPIC_ARN}" --subject "AWS CodeBuild - ${CODEBUILD_BUILD_ID}" --message "Build Completed. Initiator:${CODEBUILD_INITIATOR}, Imange:${IMAGE_REPO_NAME_WEBAPP}"
