--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,4 +17,4 @@ phases:
       - echo Pushing the Docker image...
       - docker-compose push $COMPOSE_SERVICE
       - echo Sending notification...
-      - aws sns publish --topic-arn "${SNS_TOPIC_ARN}" --subject "AWS CodeBuild - ${CODEBUILD_BUILD_ID}" --message "Build Completed. Initiator:${CODEBUILD_INITIATOR}, Imange:${IMAGE_REPO_NAME_WEBAPP}"
+      - aws sns publish --topic-arn "${SNS_TOPIC_ARN}" --subject "AWS CodeBuild - ${CODEBUILD_BUILD_ID}" --message "Build Completed. Initiator:${CODEBUILD_INITIATOR}, Image:${IMAGE_REPO_NAME_WEBAPP}"
