--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,10 +11,11 @@ phases:
   build:
     commands:
       - echo Building the Docker image...
-      - docker-compose build $COMPOSE_SERVICE
+      - aws sns publish --topic-arn "${SNS_TOPIC_ARN}" --subject "AWS CodeBuild - ${CODEBUILD_BUILD_ID}" --message "Build Started. Initiator:${CODEBUILD_INITIATOR}, Image:${IMAGE_REPO_PREFIX}"
+      - docker-compose build
   post_build:
     commands:
       - echo Pushing the Docker image...
-      - docker-compose push $COMPOSE_SERVICE
+      - docker-compose push
       - echo Sending notification...
-      - aws sns publish --topic-arn "${SNS_TOPIC_ARN}" --subject "AWS CodeBuild - ${CODEBUILD_BUILD_ID}" --message "Build Completed. Initiator:${CODEBUILD_INITIATOR}, Image:${IMAGE_REPO_NAME_WEBAPP}"
+      - aws sns publish --topic-arn "${SNS_TOPIC_ARN}" --subject "AWS CodeBuild - ${CODEBUILD_BUILD_ID}" --message "Build Completed. Initiator:${CODEBUILD_INITIATOR}, Image:${IMAGE_REPO_PREFIX}"
