--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,7 +9,7 @@ phases:
       - echo Logging in to Amazon ECR...
       - $(aws ecr get-login --region $AWS_DEFAULT_REGION  --no-include-email)
       - echo Pulling Docker Images for cache
-      - docker-compose pull
+      - docker-compose pull || :
   build:
     commands:
       - echo Building the Docker image...
