--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,7 +19,7 @@ phases:
   build:
     commands:
       - echo Building the Docker image ... 2>&1 | tee -a log.txt
-      - ./docker-compose build 2>&1 | tee -a log.txt
+      - docker-compose build 2>&1 | tee -a log.txt
   post_build:
     commands:
       - echo Pushing the Docker image ... 2>&1 | tee -a log.txt
