--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,9 +1,12 @@
 version: 0.2
 
 phases:
-  install:
+  #install:
+  #  commands:
+  #    - curl -L "https://github.com/docker/compose/releases/download/1.18.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose && chmod +x /usr/local/bin/docker-compose
     commands:
-      - curl -L "https://github.com/docker/compose/releases/download/1.18.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose && chmod +x /usr/local/bin/docker-compose
+      - echo "$ docker-compose version" | tee -a log.txt
+      - docker-compose version 2>&1 | tee -a log.txt
   pre_build:
     commands:
       - echo Creating notification message file ...
